gnome-settings-daemon (2.22.0-1) experimental; urgency=low

  * New package, based on the Ubuntu packaging.

 -- Sebastian Dröge <slomo@debian.org>  Wed, 12 Mar 2008 15:17:19 +0100

gnome-settings-daemon (2.22.0-0ubuntu1) hardy; urgency=low

  * New upstream version:
    - Actually link against libXi when building with XInput support 
    - Disable debug by default 
    - Don't pass GError's if we're not going to use them 
    - Remove obsolete settings for the removed default editor plugin 
    - Updated translations

 -- Sebastien Bacher <seb128@canonical.com>  Mon, 10 Mar 2008 18:53:42 +0100

gnome-settings-daemon (2.21.92-0ubuntu1) hardy; urgency=low

  * New upstream version:
    - Only print debug messages if --debug is used
    - Only load plugins when requested not at every start
    - Fixed #515340, Add a way to prioritise plugin load 
    - Fixed #515341, Signal when plugins finish loading 
    - Fixed #517259, Escape hostname for use in gconf key 
    - Fixed #517418, gnome-display-properties resolution change 
      will not be used after logout or reboot (lp: #191878)
    - Fixed #518075, Sound plugin should start pulseaudio itself 
  * debian/patches/90_from_svn_pulseaudio_correct_use.patch:
    - dropped, fixed in the new version
  * debian/patches/92_gsd-xrandr-version-check.patch:
    - fix type which was breaking the build

 -- Sebastien Bacher <seb128@canonical.com>  Sat, 08 Mar 2008 14:13:51 +0100

gnome-settings-daemon (2.21.91-0ubuntu6) hardy; urgency=low

  * debian/patches/92_gsd-xrandr-version-check.patch:
    - Adds checks that the xserver runs Xrandr 1.2 before starting up the
      xrandr service.

 -- Bryce Harrington <bryce@ubuntu.com>  Mon, 03 Mar 2008 21:53:34 -0800

gnome-settings-daemon (2.21.91-0ubuntu5) hardy; urgency=low

  * debian/control.in:
    - updated libgnomedesktop requirements

  [ Bryce Harrington ]

  * debian/patches/91_gsd-add-randr-12.patch: