@@ -1,21 +1,47 @@
 Source: gnome-settings-daemon
 Section: gnome
 Priority: extra
-Maintainer: Sebastien Bacher <seb128@canonical.com>
+Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: cdbs, debhelper (>= 5), dpkg-dev (>= 1.13.19), autotools-dev, libdbus-glib-1-dev (>= 0.74), libglib2.0-dev (>= 2.15.0), libgtk2.0-dev, libgconf2-dev, libgnomevfs2-dev, libgnome-desktop-dev (>= 1:2.21.92-0ubuntu2), libglade2-dev, libgnomekbd-dev (>= 2.21.4), libgstreamer-plugins-base0.10-dev, libxklavier12-dev, libx11-dev, libxml-parser-perl, gnome-pkg-tools
+Build-Depends: cdbs,
+               debhelper (>= 5),
+               dpkg-dev (>= 1.13.19),
+               autotools-dev,
+               libdbus-glib-1-dev (>= 0.74),
+               libglib2.0-dev (>= 2.15.0),
+               libgtk2.0-dev (>= 2.10.0),
+               libgconf2-dev (>= 2.6.1),
+               gconf2,
+               libgnome2-dev,
+               libgnomeui-dev,
+               libgnome-desktop-dev (>= 1:2.22.0),
+               libglade2-dev,
+               libgnomekbd-dev (>= 2.21.4),
+               libgstreamer0.10-dev (>= 0.10.1.2),
+               libgstreamer-plugins-base0.10-dev (>= 0.10.1.2),
+               libxklavier12-dev,
+               libx11-dev,
+               libxrandr-dev,
+               libxft2-dev,
+               x11proto-xf86misc-dev,
+               libesd0-dev (>= 0.2.28),
+               libxml-parser-perl,
+               gnome-pkg-tools
 Standards-Version: 3.7.3
 
 Package: gnome-settings-daemon
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libgnome-desktop-2 (>= 1:2.21.92-0ubuntu2)
-Replaces: capplets-data (<< 1:2.21.5), gnome-control-center (<< 1:2.21.5)
+Depends: ${shlibs:Depends},
+         ${misc:Depends}
+Replaces: capplets-data (<< 1:2.21.5),
+          gnome-control-center (<< 1:2.21.5)
 Description: GNOME settings daemon
  The package contains the GNOME daemon which handles the session settings
 
 Package: gnome-settings-daemon-dev
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends},
+         ${misc:Depends}
 Replaces: libgnome-settings-daemon-dev
 Description: Utility library for accessing gnome-settings-daemon over DBUS
  The package contains what is required to access gnome-settings-daemon over DBUS
